Ref: change method for schedule
