# docs/swagger.json
@@ -17,7 +17,7 @@
     "basePath": "/",
     "paths": {
         "/api/v1/schedule": {
-            "post": {
+            "get": {
                 "description": "Get schedule based on the request",
                 "consumes": [
                     "application/json"
@@ -31,13 +31,18 @@
                 "summary": "Get Schedule",
                 "parameters": [
                     {
-                        "description": "Schedule Request",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/rest.ScheduleRequest"
-                        }
+                        "type": "string",
+                        "description": "Study Programs",
+                        "name": "study_programs",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Day",
+                        "name": "day",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -161,25 +166,6 @@
                 },
                 "request_id": {
                     "type": "string"
-                }
-            }
-        },
-        "rest.ScheduleRequest": {
-            "type": "object",
-            "required": [
-                "day",
-                "study_programs"
-            ],
-            "properties": {
-                "day": {
-                    "type": "string",
-                    "example": "senin"
-                },
-                "study_programs": {
-                    "type": "string",
-                    "maxLength": 255,
-                    "minLength": 3,
-                    "example": "matematika"
                 }
             }
         },
